fixed alignment and scaling issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3292,6 +3292,7 @@ summary {
   color: #68b604; }
 
 * {
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
@@ -3535,21 +3536,18 @@ sup, sub {
     font-weight: 400; }
 
 .skill-section {
+  height: 90%;
   border-radius: 10px;
   border: 2px solid #2c3949; }
 
 .skills {
-  width: 40%; }
-  .skills h2 {
-    font-weight: 400;
-    text-align: center; }
+  width: 48%; }
 
 .education-item {
   width: 100%;
   border-radius: 10px;
   border: 2px solid #2c3949; }
   .education-item h3 {
-    margin: auto;
     margin-top: 0px;
     margin-bottom: 20px;
     text-align: center;
@@ -3568,21 +3566,25 @@ sup, sub {
     color: #222; }
 
 .education-section {
-  height: 80.5%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
 
 .education {
-  width: 55%; }
-  .education h2 {
-    text-align: center;
-    font-weight: 400; }
+  width: 48%; }
 
 .qualifications {
+  height: 650px;
   display: flex;
   align-items: stretch;
   justify-content: space-between; }
+  .qualifications h2 {
+    margin: 0px;
+    height: 10%;
+    padding-top: 12px;
+    text-align: center;
+    font-weight: 400; }
 
 .about-me {
   text-align: center;
