--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -42,16 +42,13 @@
 }
 
 .skill-section {
+  height: 90%;
   border-radius: 10px;
   border: 2px solid #2c3949;
 }
 
 .skills {
-  width: 40%;
-  h2 {
-    font-weight: 400;
-    text-align:center
-  }
+  width: 48%;
 }
 
 .education-item {
@@ -59,7 +56,6 @@
   border-radius: 10px;
   border: 2px solid #2c3949;
   h3 {
-    margin: auto;
     margin-top: 0px;
     margin-bottom: 20px;
     text-align: center;
@@ -84,24 +80,28 @@
 }
 
 .education-section {
-  height: 80.5%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .education {
-  width: 55%;
-  h2 {
-    text-align: center;
-    font-weight: 400;
-  }
+  width: 48%;
 }
 
 .qualifications {
+  height: 650px;
   display: flex;
   align-items: stretch;
   justify-content: space-between;
+  h2 {
+    margin: 0px;
+    height: 10%;
+    padding-top: 12px;
+    text-align: center;
+    font-weight: 400;
+  }
 }
 
 .about-me {
