--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Josefin+Slab|Antic+Slab');
 
 * {
+    box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
